--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ttbt28.github.io/TeslaWebApp/",
+  "homepage": "https://ttbt28.github.io/TeslaWebApp",
   "name": "TeslaWebApp",
   "version": "0.1.0",
   "private": true,
